fixed dashboard buttons on mobile

--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -249,6 +249,13 @@ footer {
 
     .actions {
         width: 100% !important;
+        display: flex;
+        flex-direction: column;
+        margin-left: 22%;
+    }
+
+    .dashboard-btn{
+        margin-bottom: 5px;
     }
 
     .mBtn {
